# Lab_2.22

./: README.md  pyproject.toml
program/: ind.py  tests.py
