[tool.poetry]
name = "lab-2-22"
version = "0.1.0"
description = ""
authors = ["alexeiepif <aled2093746@gmail.com>"]
readme = "README.md"
packages = [{include = "lab_2"}]

[tool.poetry.dependencies]
python = "^3.12"
psycopg2 = "^2.9.9"


[tool.poetry.group.dev.dependencies]
black = "^24.4.0"
flake8 = "^7.0.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79